--- a/web/newad.html
+++ b/web/newad.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="picture" class="form-label">Fénykép az ingatlanról</label>
-                    <input type="url" class="form-control" id="picture">
+                    <input type="url" placeholder="https://example.com" class="form-control" id="picture">
                 </div>
                 <div class="mb-3 text-center">
                     <button class="btn btn-primary px-5">Küldés</button>
